<resources>
    <string name="action_settings">Settings</string>
    <string name="mobile_hint">
        <font size="20">请输入你的手机号</font>
    </string>
    <string name="password_hint">
        <font size="20">请输入你的密码</font>
    </string>
    <string name="confirm_password_hint">
        <font size="20">再次输入你的密码</font>
    </string>
    <string name="verification_code_hint">
        <font size="20">请输入验证码</font>
    </string>
    <string name="school_hint">
        <font size="20">点击选择你的学校</font>
    </string>
    <string name="forget_password_tip">
        <u>忘记密码?</u>
    </string>
    <string name="user_protocal_tip">
        <u>用户协议</u>
    </string>
    <string name="prepay_order_tip">
        <u>设备使用结束，长时间未找零？</u>
    </string>
    <string name="withdrawal_total_tip">
        <u>全部退款</u>
    </string>
    <string name="query_expired_bonus_tip">
        <u>查看过期代金券</u>
    </string>
    <string name="app_loading">加载中…</string>
    <string name="app_loading_more">加载更多…</string>
    <string name="app_no_more_data">没有更多数据了…</string>
    <string name="excepted_water">预计用水量</string>
    <string name="some_error">错误</string>
    <string name="confirm">确定</string>
    <string name="please_enter_nickname">请输入昵称</string>
    <string name="nickname">昵称</string>
    <string name="edit_mobile">修改手机号</string>
    <string name="two_mobile_equal">新手机号不能与老手机号一致</string>
    <string name="change_mobile_equal">手机号修改成功</string>
    <string name="verify_password_only_one_titile">还可进行%1$d次密码验证</string>
    <string name="verify_password_tip">连续失败5次,将进行2小时密码保护</string>
    <string name="verify_password_failed_title">请%1$d分钟后再尝试验证密码</string>
    <string name="verify_password_failed">因已连续失败5次,已进行密码保护</string>
    <string name="verify_password_failed_stop">因已连续失败5次,该账号已被冻结</string>
    <string name="please_enter_least_six_password">请输入至少6位数的密码</string>
    <string name="please_enter_new_mobile">请输入新的手机号</string>
    <string name="please_enter_verify_code">请输入收到的验证码</string>
    <string name="password_invalid">密码不对，登录失败，请重试！</string>
    <string name="edit_password">修改账户密码</string>
    <string name="change_phone_number">修改手机号</string>
    <string name="password_verify">验证密码登录</string>
    <string name="edit_bathroom_password">修改浴室密码</string>
    <string name="please_enter_old_password">请输入原密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="please_enter_new_password_again">请再次输入新密码</string>
    <string name="find_password">找回密码</string>
    <string name="please_enter_new_six_pure_number_password">请输入新的6位纯数字密码</string>
    <string name="save">保存</string>
    <string name="bathroom_password_find">修改浴室密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="description_bathroom_password">浴室密码说明</string>
    <string name="choose_bonus">挑选代金券</string>
    <string name="shower_process">以预付%1$d元，请尽快放水洗澡(%2$ds)</string>
    <string name="no_search_result">未搜到相关的内容</string>
    <string name="water_supply_sub_tip">继续使用，则只有冷水</string>
    <string name="water_supply_tip">供水时段为07:00~12:00、20:00~23:00</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="keep_use">继续使用</string>
    <string name="keep_use_cold_water">使用冷水</string>
    <string name="emergency_notice">紧急通知</string>
    <string name="do_not_remind">不再提示</string>
    <string name="withdraw_tip">退款时间为：\n每周二12:00~每周四12:00</string>
    <string name="repair_detail">报修详情</string>
    <string name="edit_profile">编辑个人信息</string>
    <string name="edit_nickname">编辑昵称</string>
    <string name="recharge">充值</string>
    <string name="my_wallet">我的钱包</string>
    <string name="repair_apply">报修申请</string>
    <string name="device_type">设备类型</string>
    <string name="repair_evaluation">报修评价</string>
    <string name="device_repair">设备报修</string>
    <string name="my_bonus">我的代金券</string>
    <string name="exchange_bonus">兑换代金券</string>
    <string name="order_record">消费记录</string>
    <string name="empty_tip">空空如也</string>
    <string name="empty_tip_1">暂无记录</string>
    <string name="lost">失物</string>
    <string name="my_publish">我的发布</string>
    <string name="repair_record">报修记录</string>
    <string name="edit_dormitory">洗澡地址</string>
    <string name="search">搜索</string>
    <string name="found">招领</string>
    <string name="expried_bonus">过期代金券</string>
    <string name="change_success">修改成功</string>
    <string name="delete_success">删除成功</string>
    <string name="setting_success">设置成功</string>
    <string name="get_success">获取成功</string>
    <string name="get_fail">获取失败</string>
    <string name="bind_success">绑定成功</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="add_dormitory">新的地址</string>
    <string name="change_avatar">更换头像</string>
    <string name="please_login">请重新登录</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="check_password">校验密码</string>
    <string name="my_favorite">我收藏的设备</string>
    <string name="please_choose_lost_time">请选择丢失的时间</string>
    <string name="please_choose_found_time">请选择捡到物品的时间</string>
    <string name="not_use_bonus">不使用代金券</string>
    <string name="prepay_money">预付金额</string>
    <string name="prepay_money_colon">预付金额：</string>
    <string name="withdrawal">退款申请</string>
    <string name="network_available_error_tip">当前网络质量较差 ಠ_ಠ</string>
    <string name="network_not_available">当前网络不可用，检查网络</string>
    <string name="please_enter_password_to_verify">请输入登录密码进行验证</string>
    <string name="manage_dormitory">新的地址</string>
    <string name="notice_center">通知中心</string>
    <string name="prepay_order">待找零订单</string>
    <string name="balance_trade_tip">100s内未打开放水阀门，系统将自动停止本次服务\n消费金额以实际用水量为准\n用水结束后请务必点击下方"结束找零"按钮</string>
    <string name="balance_trade_tip_water">用水结束后请务必滑动下方按钮，进行结算找零\n消费金额以实际用水量为准</string>
    <string name="balance_trade_tip_dryer">使用结束后请务必滑动下方按钮，进行结算找零\n消费金额以使用时间为准</string>
    <string name="bonus_trade_tip">代金券金额对应水量上线，一旦使用则立即消耗\n点击下方按钮即结束用水</string>
    <string name="more">更多</string>
    <string name="about_us">关于我们</string>
    <string name="connected_tip_1">(100s)内未打开放水阀门，系统将自动停止本次服务\n消费金额以实际用水量为准</string>
    <string name="connecting_tip_1">正在连接设备, 请稍后</string>
    <string name="connect_error_tip_1">请靠近设备</string>
    <string name="connect_error_tip_2">请长按设备上的物理按钮以结束用水，然后重新连接\n给你带来的不便敬请谅解！</string>
    <string name="connect_error_tip_3">网络连接超时，请检查你的网络</string>
    <string name="connect_error_tip_4">你的手机蓝牙无法与设备进行连接，请重试</string>
    <string name="connect_error_tip_5">请靠近设备，并确保设备未被他人使用</string>
    <string name="connect_error_tip_6">请尝试重启手机蓝牙，并允许笑联使用GPRS定位！</string>
    <string name="device_busy_tip">当前设备正在被他人使用，请稍后再试或切换宿舍\n给你带来的不便敬请谅解！</string>
    <string name="device_busy_tip2">当前设备正在被他人使用，请稍后再试或切换饮水机\n给你带来的不便敬请谅解！</string>
    <string name="device_broken_tip_2">当前设备出现了故障，请稍后再试或前往报修\n给你带来的不便敬请谅解！</string>
    <string name="system_error_tip">当前设备出现了故障，请稍后再试或前往报修\n给你带来的不便敬请谅解！</string>
    <string name="connect_error_title_1">与设备连接失败</string>
    <string name="connect_error_title_2">操作失败</string>
    <string name="device_busy__title">设备繁忙</string>
    <string name="device_broken_title">故障设备</string>
    <string name="system_error_title">故障设备</string>
    <string name="connect_error_btn">重新连接</string>
    <string name="device_busy_btn">切换宿舍</string>
    <string name="device_broken_btn_1">联系客服</string>
    <string name="device_broken_btn_2">前往报修</string>
    <string name="nearby_dispenser">附近的饮水机</string>
    <string name="favorite_dispenser">收藏的饮水机</string>
    <string name="change_avatar_success">头像更换成功</string>
    <string name="change_nickname_success">昵称修改成功</string>
    <string name="change_sex_success">性别修改成功</string>
    <string name="change_mobile_success">手机号修改成功</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="add_dormitory_success">宿舍添加成功</string>
    <string name="bonus_exchange_success">代金券兑换成功</string>
    <string name="change_school_success">学校更换成功，请重新登录</string>
    <string name="withdrawal_record">充值明细</string>
    <string name="unselected">未选择</string>
    <string name="choose_alipay_account">选择支付宝账号</string>
    <string name="add_alipay_account">添加支付宝账号</string>
    <string name="please_enter_alipay_account">请输入支付宝账户</string>
    <string name="please_enter_real_name">请输入真实姓名</string>
    <string name="add_alipay_account_tip">温馨提示：请输入该支付宝账户已实名认证的姓名，否则会导致退款失败</string>
    <string name="recharge_detail">充值详情</string>
    <string name="withdraw_detail">退款详情</string>
    <string name="withdraw_available">可退款金额%1$s，</string>
    <string name="unknown">未知</string>
    <string name="unbind">未绑定</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="publish_time">发布时间：%1$s/%2$s</string>
    <string name="time_format">%1$s/%2$s</string>
    <string name="settlement">正在结算找零，请稍候...</string>
    <string name="slide_to_settlement">滑动到最右侧，结算找零</string>
    <string name="slide_to_stop_use">滑动到最右侧，结束用水</string>
    <string name="stop_use">正在结束用水，请稍候...</string>
    <string name="change_dispenser">更换饮水机</string>
    <string name="change_dormitory">更换宿舍</string>
    <string name="change_dryer">更换吹风机</string>
    <string name="current_temperature_colon">当前水温：%1$s</string>
    <string name="change_school_tip">更换学校后所有信息将清空，且需要重新登录</string>
    <string name="cancel_apply_school_tip">取消后将不会处理更换学校申请</string>
    <string name="commit_apply_school_tip">更换学校后，代金券和积分将会清零</string>
    <string name="please_enter_exchange_code">请输入兑换码</string>
    <string name="i_know">朕知道了</string>
    <string name="choose_school_tip">PS:当前仅支持可选学校，更多学校敬请期待</string>
    <string name="where_the_building">所在楼栋</string>
    <string name="where_the_floor">所在楼层</string>
    <string name="location_detail">具体位置</string>
    <string name="order_bills">消费账单</string>
    <string name="i_want_complaint">我要投诉</string>
    <string name="use_time">使用时间</string>
    <string name="device_location">设备位置</string>
    <string name="order_number">订单号</string>
    <string name="copy">复制</string>
    <string name="pay_way">支付方式</string>
    <string name="publish_found">招领发布</string>
    <string name="publish_lost">失物发布</string>
    <string name="real_bill">实际消费</string>
    <string name="scan_nearby_device">正在扫描附近的设备</string>
    <string name="please_choose_device_info">请选择设备信息</string>
    <string name="please_choose_device_problem">请选择设备问题</string>
    <string name="evaluation_info">评价信息</string>
    <string name="customer_response">客服回复</string>
    <string name="score">%1$d分</string>
    <string name="use_bonus_colon">代金券抵扣：</string>
    <string name="need_prepay_amount">需预付%1$s元</string>
    <string name="connect_prepay_tip_1">使用结束后请务必滑动按钮进行结算找零\n当前没有可用代金券哦</string>
    <string name="prepay_start_shower">预付%1$s元，开始洗澡</string>
    <string name="comma_start_shower">，开始洗澡</string>
    <string name="comma_start_drink">，开始接水</string>
    <string name="comma_start_dryer">，开始使用</string>
    <string name="connect_prepay_tip_2">你当前余额不足%1$s元，需预付全部余额\n使用结束后请结算找零</string>
    <string name="prepay_no_balance">余额不足</string>
    <string name="connect_prepay_tip_3">你当前余额不足%1$s元，请前往充值\n充值后再来使用哦</string>
    <string name="use_time_colon">下单时间：</string>
    <string name="device_location_colon">设备位置：</string>
    <string name="order_number_colon">订单号：</string>
    <string name="bathroom_password_tip1">1.请设置你的6位数字浴室密码，设置完成后可前往"个人中心"——"编辑个人信息"里进行修改或找回；</string>
    <string name="bathroom_password_tip2">2.浴室密码的作用：在浴室房间里的设备上输入手机号＋浴室密码，便可开阀洗澡。</string>
    <string name="hint_change_school_reason">请描述更换学校原因,最多100字</string>
    <string name="update_school_introduce">更新学校说明</string>
    <string name="update_school_introduce_item_one">
        1.所有消费账单必须结算找零,且账户余额为0的情况下,才可更换学校;
    </string>
    <string name="update_school_introduce_item_two">
        2.更换学校需描述原因,审核通过后,代金券和积分及其它所有信息将清空。
    </string>
    <string name="commit_change_school">提交审核</string>
</resources>