<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg_rect_corner_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="72dp">
        <TextView
            android:id="@+id/tv_tip"
            tool:text="@string/water_supply_tip"
            android:textSize="14sp"
            android:textColor="@color/colorDark2"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="6dp"
            android:id="@+id/tv_sub_tip"
            android:text="@string/water_supply_sub_tip"
            android:textColor="@color/colorDark9"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/colorDarke"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/colorDark9"
            android:text="@string/cancel"
            android:layout_height="match_parent" />
        <View
            android:background="@color/colorDarke"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/colorBlue"
            android:textSize="12sp"
            android:gravity="center"
            tool:text="@string/ok"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>