<?xml version="1.0" encoding="utf-8"?>
<com.xiaolian.amigo.tmp.component.Formlayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackgroundGray"
    android:orientation="vertical"
    android:paddingLeft="@dimen/mainMarginLeftRight"
    android:paddingRight="@dimen/mainMarginLeftRight"
    android:paddingTop="14dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="40dp"
        android:src="@drawable/back" />

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit_mobile"
        />

    <!--<com.xiaolian.amigo.tmp.component.ClearableEditText-->
        <!--android:id="@+id/edit_mobile"-->
        <!--style="@style/EditText"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:drawableEnd="@drawable/clear"-->
        <!--android:drawableRight="@drawable/clear"-->
        <!--android:hint="@string/please_enter_new_mobile"-->
        <!--android:imeOptions="actionDone"-->
        <!--android:tag="mobile" />-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/edittext_default"
        android:layout_height="48dp">

        <com.xiaolian.amigo.tmp.component.ClearableEditText
            android:id="@+id/et_mobile"
            style="@style/EditText"
            android:background="@android:color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:drawableEnd="@drawable/clear"
            android:drawableRight="@drawable/clear"
            android:hint="@string/please_enter_new_mobile"
            />

        <Button
            android:id="@+id/bt_verify_code"
            android:background="@drawable/bg_rect_red_stroke"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:text="获取验证码"
            android:textColor="#ff5555"
            android:layout_width="72dp"
            android:layout_height="27dp" />

    </LinearLayout>

    <com.xiaolian.amigo.tmp.component.ClearableEditText
        android:id="@+id/edit_verify_code"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableEnd="@drawable/clear"
        android:drawableRight="@drawable/clear"
        android:hint="@string/please_enter_verify_code"
        android:imeOptions="actionDone"
        android:tag="verify_code" />

    <Button
        android:id="@+id/bt_submit"
        style="@style/Button"
        android:onClick="onclick"
        android:layout_marginTop="34dp"
        android:enabled="false"
        android:text="@string/confirm" />


</com.xiaolian.amigo.tmp.component.Formlayout>
