<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="@color/white90"
    android:paddingTop="21dp"
    android:visibility="gone"
    tool:visibility="visible"
    android:id="@+id/ll_content_shower"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_shower_payed"
        android:layout_gravity="center_horizontal"
        tool:text="已预付10元"
        android:textColor="#ff5555"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/trade_tip"
        android:textColor="#999"
        android:textSize="10sp"
        android:layout_marginTop="13dp"
        android:text="@string/connected_tip_1"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--由于上方TextView行距为8dp，所以下方margin从20dp变为12dp-->
    <View
        android:layout_marginTop="12dp"
        android:background="#f3f3f3"
        android:layout_gravity="center_horizontal"
        android:layout_width="12dp"
        android:layout_height="2dp"/>

    <com.xiaolian.amigo.ui.widget.swipebutton.SlideUnlockView
        android:background="@color/colorDarke"
        app:slideEnableText="@string/settlement"
        app:slideDisableText="@string/slide_to_settlement"
        app:slideDisableUnlockBlockResource="@drawable/ic_swipe_disable"
        app:slideEnabledUnlockBlockResource="@drawable/ic_swipe_enable"
        app:slideUnlockBlockResource="@drawable/ic_swipe_moving"
        android:visibility="gone"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="21dp"
        android:id="@+id/slideView"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:enabled="true"
        android:id="@+id/bt_stop_shower"
        style="@style/DeviceButton"
        />
</LinearLayout>
