<?xml version="1.0" encoding="utf-8"?>
<com.xiaolian.amigo.ui.widget.Formlayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    android:orientation="vertical">

    <com.xiaolian.amigo.ui.widget.ClearableEditText
        android:id="@+id/et_bathroom_password"
        style="@style/Profile_EditText"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="6" />

    <Button
        android:id="@+id/bt_submit"
        style="@style/Button"
        android:layout_marginTop="34dp"
        android:enabled="false"
        android:text="@string/confirm"
        android:stateListAnimator="@null"/>

    <RelativeLayout
        android:id="@+id/rl_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="14dp">

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="浴室密码说明" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="29dp"
            android:layout_toStartOf="@id/tv_tip"
            android:background="#e9e9e9" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="29dp"
            android:layout_toEndOf="@id/tv_tip"
            android:background="#e9e9e9" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/bathroom_password_tip1" />

    <TextView
        android:id="@+id/tv_tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/bathroom_password_tip2" />

</com.xiaolian.amigo.ui.widget.Formlayout>
