<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <TextView
            style="@style/ContentText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/use_time_colon" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/ContentText_main"
            android:textColor="#666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#eee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <TextView
            android:id="@+id/tv_location_title"
            style="@style/ContentText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/device_location_colon" />

        <TextView
            android:id="@+id/tv_device_location"
            android:layout_toRightOf="@id/tv_location_title"
            style="@style/ContentText_main"
            android:gravity="right"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#eee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <TextView
            style="@style/ContentText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/order_number_colon" />

        <TextView
            android:id="@+id/tv_copy"
            android:text="@string/copy"
            android:gravity="center"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorBlue"
            android:paddingLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/v_divide"
            android:layout_toLeftOf="@id/tv_copy"
            android:layout_marginLeft="7dp"
            android:background="#e5e5e5"
            android:layout_centerVertical="true"
            android:layout_width="1dp"
            android:layout_height="14dp"/>

        <TextView
            android:layout_toLeftOf="@id/v_divide"
            android:id="@+id/tv_order_no"
            style="@style/ContentText_main"
            android:textSize="11sp"
            android:textColor="#666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</LinearLayout>
