<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="设置密码"
        android:textColor="#ff5555"
        android:textSize="14sp"
        android:textStyle="bold" />


    <com.xiaolian.amigo.ui.widget.PasswordEditText
        android:id="@+id/et_userpwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:drawableBottom="@drawable/line"
        android:drawableEnd="@drawable/pwd_eye_open"
        android:drawableRight="@drawable/pwd_eye_open"
        android:hint="@string/password_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="@integer/password_max_length"
        android:maxLines="1"
        android:minLines="@integer/password_min_length"
        android:gravity="center_vertical"
        style="@style/EditTextLogin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="选择学校"
        android:textColor="#ff5555"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_school"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:drawableBottom="@drawable/line"
        android:drawableEnd="@drawable/forward"
        android:hint="@string/school_hint"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:textColor="#222"
        android:textColorHint="#bbb"
        android:textSize="@dimen/login_edit_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/choose_school_tip"
        android:textColor="#aaa"
        android:textSize="11sp" />

    <Button
        android:id="@+id/bt_submit"
        style="@style/Rect_button"
        android:enabled="false"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="34dp"
        android:text="完成"
        />
</LinearLayout>
